2008-12-02 02:07-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibCompatibility.h: Remove
	* Headers/Additions/GNUstepGUI/GSNibTemplates.h: Remove 
	* Source/GNUmakefile: Update to reference new files.
	* Source/GSGormLoader.m: Change to reference the 
	* Source/GSGormLoading.m: New gorm loading file.
	* Source/GSNibCompatibility.m: Removed.
	* Source/GSNibLoader.m: Reference the new file.
	* Source/GSNibLoading.m: New file containing the nib loading logic.
	* Source/GSNibTemplates.m: Removed.

2008-12-02 01:21-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Fix for bug #24979.   Change in 
	initWithCoder: for NSCustomView to return the real object directly 
	and call nibInstantiate.  Change to prevent double instantiation
	of NSApplication.

2008-12-02  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSSecureTextField.m: Added initWithCoder: method which 
	turns on bullets by default.

2008-11-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* install.sh: Fix header syntax and provide default for make
	command argument.

2008-11-30 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSLayoutManager.m: Fix uninitialised variable ... but is the
	fix correct?

2008-11-29 00:40-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Added back in _root assignment in
	-[NSIBObjectData initWithCoder:].  It's removal caused an issue with
	loading some nibs.

2008-11-28 15:20-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Correct issue when loading into
	Gorm.  NSClassSwapper should check to see if it's in the gui builder
	and return the appropriate class.

2008-11-27 10:07-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Corrected issue with using generic
	cells on some controls.

2008-11-27 Richard Frith-Macdonald <rfm@gnu.org>

	* NSSound.m:
	* NSWorkspace.m: