@@ -53,7 +53,7 @@
 #include "AppKit/NSSound.h"
 #include "AppKit/NSWindow.h"
 #include "GNUstepGUI/GSTheme.h"
-#include "GNUstepGUI/GSNibCompatibility.h"
+#include "GNUstepGUI/GSNibLoading.h"
 
 #include <math.h>
 
